@@ -3,6 +3,7 @@ Version 0.3.7 ()
 - Disable browser-autocomplete on searchbox @ProLoser
 - Fix documentation @adebree
 - Add file history button (Issue #169)
+- Update Ace Editor
 
 Version 0.3.6 (2019-10-08)
 - Update Ace Editor @emontnemery & @danielperna84
